# nightowl-standalone-controller

./: .gitignore  BEHAVIOR.md  BUILD_FLASH.md  HARDWARE.md  MANUAL.md  README.md  WORKFLOW.md  config.ini.example
.claude/: settings.json  settings.local.json
.claude/skills/flash-ready/: SKILL.md
.claude/skills/new-cmd/: SKILL.md
firmware/: CMakeLists.txt
firmware/include/: config.h  neopixel.h  tmc2209.h
firmware/src/: main.c  neopixel.c  tmc2209.c
scripts/: flash_nightowl.sh  gen_motor_config.py  klipper_tune.py  nightowl_test.py  serial_utils.py  test_tmc_uart.py  tmc_chopconf.py  tune_config.ini  tune_stallguard.py
